--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     margin: 0;
     padding: 0;
-    background: linear-gradient(black,rgb(29, 29, 29),rgb(83, 83, 83));
+    background-color: black;
+}
+canvas{
+    background-color: black;
 }
